--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,15 @@
             "php artisan optimize"
         ],
         "post-update-cmd": [
+            "mkdir bootstrap/cache",
+            "mkdir storage/app",
+            "mkdir storage/app/public",
+            "mkdir storage/framework",
+            "mkdir storage/framework/cache",
+            "mkdir storage/framework/sessions",
+            "mkdir storage/framework/views",
+            "mkdir storage/framework/cache",
+            "mkdir storage/framework/logs",
             "php artisan clear-compiled",
             "php artisan optimize"
         ]
